--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-gb">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>{{ page.title }}</title>
+
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
+
+    <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="all" />
+</head>
+<body>
+    <div class="site">
+        <div class="header">
+            <h1><a href="/">Status Blog</a></h1>
+        </div>
+        {{ content }}
+
+    {% for post in site.posts offset:8 limit:1 %}
+    <div class="footer">
+        <div class="contact">
+            <p>
+            Pothi Kalimuthu<br />
+            Performance Optimization Consultant<br />
+            pothi@tinywp.com
+            </p>
+        </div>
+        <div class="contact">
+            <p>
+            <a href="http://github.com/pothi/">github.com/pothi</a><br />
+            <a href="http://twitter.com/pothi/">twitter.com/pothi</a><br />
+            </p>
+        </div>
+    </div>
+    {% endfor %}
+
+    </div>
+
+</body>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
-
-		<!-- favicon -->
-		<link rel="icon" type="image/x-icon" href="images/favicon.png" />
-
-    </head>
-    <body>
-
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            </div>
-
-                {{ content }}
-
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  Pothi Kalimuthu<br />
-                  Performance Optimization Consultant<br />
-                  pothi@tinywp.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/pothi/">github.com/pothi</a><br />
-                  <a href="http://twitter.com/pothi/">twitter.com/pothi</a><br />
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
-
-    </body>
-</html>
