--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-{{ content }}
+<div class="post">  
+    <h2> {{page.title}} </h2>
+    <span class="date">{{ page.date | date:"%B %d, %Y" }}</span>
+    {{ content }}
 </div>
