--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-gb">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="viewport" content="width=device-width" />
+
     <title>{{ page.title }}</title>
 
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
