--- a/source/css/screen.css
+++ b/source/css/screen.css
@@ -86,8 +86,8 @@ ul.posts span {
 .site {
     font-size: 110%;
     text-align: justify;
-    width: 40em;
-    margin: 3em auto 2em auto;
+    width: 80%;
+    margin: 10px auto;
     line-height: 1.5em;
 }
 
