--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,13 +9,13 @@
 
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
 
-    <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css" type="text/css" media="all" />
 </head>
 <body>
     <div class="site">
         <div class="header">
-            <h1><a href="/">Status Blog</a></h1>
+			<h1><a href="{{ site.baseurl }}/">Status Blog</a></h1>
         </div>
         {{ content }}
 
